summary function added
